// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comphub - Main - Summary Card Component should display CAD for currency when active market data is Canada 1`] = `
<pf-summary-card
  activeCountryDataSet$={[Function Observable]}
  canAccessProjectsTile$={[Function Store]}
  creatingProject$={[Function Store]}
  creatingProjectError$={[Function Store]}
  firstDayOfMonth={[Function Date]}
  jobData="null"
  jobSalaryTrendData="null"
  paymarket={[Function Object]}
  pdf={[Function PDFExportComponent]}
  salaryTrendData$={[Function Store]}
  salaryTrendSubscription={[Function Subscriber]}
  selectedJobData$={[Function Store]}
  selectedJobDataSubscription={[Function Subscriber]}
  selectedPageId$={[Function Store]}
  selectedPageIdSubscription={[Function Subscriber]}
  selectedPaymarket$={[Function Store]}
  selectedPaymarketSubscription={[Function Subscriber]}
  selectedRate={[Function String]}
  selectedRate$={[Function Store]}
  selectedRateSubscription={[Function Subscriber]}
  sharePricingSummaryConflict$={[Function Store]}
  sharePricingSummaryError$={[Function Store]}
  sharePricingSummaryModalOpen$={[Function Store]}
  store={[Function Store]}
  systemUserGroupNames={[Function Object]}
  userContext$={[Function Store]}
>
  <pf-card-layout
    pageiconclass="fa-file-alt"
    pagesubtitle="Let's review a summary of your pricing activity"
    pagetitle="Summary"
  >
    
    <kendo-pdf-export
      forcepagebreak=".page-break"
      ng-reflect-creator="Payfactors"
      ng-reflect-force-page-break=".page-break"
      ng-reflect-paper-size="Letter"
      ng-reflect-scale="0.7"
    >
      <div>
        <div
          class="summary-pdf-wrapper"
        >
          <img
            alt="payfactors"
            class="pdf-logo"
            src="assets/images/payfactors-logo-on-white.png"
          />
          <div
            class="pdf-header"
          >
            Pricing Summary
          </div>
          <div
            class="summary-container row mt-4"
          >
            <div
              class="col left-container"
            >
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Job Title
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Effective Date
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      03/01/2019
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Rate
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      Annual
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    FLSA
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      -
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Currency
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      CAD
                    </h4>
                  </div>
                </div>
                <div>
                  <span>
                    Market
                  </span>
                  <div>
                    <h4
                      class="header-blue paymarket-name"
                      title="National"
                    >
                      National
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="width-250"
                >
                  <span>
                    Base Salary
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Total Cash Compensation
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Salary Trend
                  </span>
                  <pf-salary-trend-chart />
                </div>
              </div>
              
            </div>
            <div
              class="right-container col"
            >
              <div
                class="d-flex flex-column"
              >
                <span>
                  Job Description
                </span>
                <div
                  class="job-description"
                >
                    
                </div>
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </kendo-pdf-export>
    <pf-glossary-of-terms />
    
    <button
      class="btn comphub-primary-btn"
      data-qa-id="btn-priceNewJob"
    >
       Price New Job 
    </button>
    <div
      class="download-pdf"
      data-qa-id="btn-downloadPdf"
    >
      <i
        class="fas fa-file-pdf"
      />
       Download 
    </div>
    <div
      class="share-btn"
      data-qa-id="btn-share"
    >
      <i
        class="fas fa-share"
      />
       Share 
    </div>
    
    
    
  </pf-card-layout><pf-share-pricing-summary-modal />
</pf-summary-card>
`;

exports[`Comphub - Main - Summary Card Component should display USD for currency when active market data is USA 1`] = `
<pf-summary-card
  activeCountryDataSet$={[Function Observable]}
  canAccessProjectsTile$={[Function Store]}
  creatingProject$={[Function Store]}
  creatingProjectError$={[Function Store]}
  firstDayOfMonth={[Function Date]}
  jobData="null"
  jobSalaryTrendData="null"
  paymarket={[Function Object]}
  pdf={[Function PDFExportComponent]}
  salaryTrendData$={[Function Store]}
  salaryTrendSubscription={[Function Subscriber]}
  selectedJobData$={[Function Store]}
  selectedJobDataSubscription={[Function Subscriber]}
  selectedPageId$={[Function Store]}
  selectedPageIdSubscription={[Function Subscriber]}
  selectedPaymarket$={[Function Store]}
  selectedPaymarketSubscription={[Function Subscriber]}
  selectedRate={[Function String]}
  selectedRate$={[Function Store]}
  selectedRateSubscription={[Function Subscriber]}
  sharePricingSummaryConflict$={[Function Store]}
  sharePricingSummaryError$={[Function Store]}
  sharePricingSummaryModalOpen$={[Function Store]}
  store={[Function Store]}
  systemUserGroupNames={[Function Object]}
  userContext$={[Function Store]}
>
  <pf-card-layout
    pageiconclass="fa-file-alt"
    pagesubtitle="Let's review a summary of your pricing activity"
    pagetitle="Summary"
  >
    
    <kendo-pdf-export
      forcepagebreak=".page-break"
      ng-reflect-creator="Payfactors"
      ng-reflect-force-page-break=".page-break"
      ng-reflect-paper-size="Letter"
      ng-reflect-scale="0.7"
    >
      <div>
        <div
          class="summary-pdf-wrapper"
        >
          <img
            alt="payfactors"
            class="pdf-logo"
            src="assets/images/payfactors-logo-on-white.png"
          />
          <div
            class="pdf-header"
          >
            Pricing Summary
          </div>
          <div
            class="summary-container row mt-4"
          >
            <div
              class="col left-container"
            >
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Job Title
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Effective Date
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      03/01/2019
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Rate
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      Annual
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    FLSA
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      -
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Currency
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      USD
                    </h4>
                  </div>
                </div>
                <div>
                  <span>
                    Market
                  </span>
                  <div>
                    <h4
                      class="header-blue paymarket-name"
                      title="National"
                    >
                      National
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="width-250"
                >
                  <span>
                    Base Salary
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Total Cash Compensation
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Salary Trend
                  </span>
                  <pf-salary-trend-chart />
                </div>
              </div>
              
            </div>
            <div
              class="right-container col"
            >
              <div
                class="d-flex flex-column"
              >
                <span>
                  Job Description
                </span>
                <div
                  class="job-description"
                >
                    
                </div>
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </kendo-pdf-export>
    <pf-glossary-of-terms />
    
    <button
      class="btn comphub-primary-btn"
      data-qa-id="btn-priceNewJob"
    >
       Price New Job 
    </button>
    <div
      class="download-pdf"
      data-qa-id="btn-downloadPdf"
    >
      <i
        class="fas fa-file-pdf"
      />
       Download 
    </div>
    <div
      class="share-btn"
      data-qa-id="btn-share"
    >
      <i
        class="fas fa-share"
      />
       Share 
    </div>
    
    
    
  </pf-card-layout><pf-share-pricing-summary-modal />
</pf-summary-card>
`;

exports[`Comphub - Main - Summary Card Component should hide create project button has access to projects tile but no paymarketId 1`] = `
<pf-summary-card
  activeCountryDataSet$={[Function Store]}
  canAccessProjectsTile$={[Function Observable]}
  creatingProject$={[Function Store]}
  creatingProjectError$={[Function Store]}
  firstDayOfMonth={[Function Date]}
  jobData="null"
  jobSalaryTrendData="null"
  paymarket={[Function Object]}
  pdf={[Function PDFExportComponent]}
  salaryTrendData$={[Function Store]}
  salaryTrendSubscription={[Function Subscriber]}
  selectedJobData$={[Function Store]}
  selectedJobDataSubscription={[Function Subscriber]}
  selectedPageId$={[Function Store]}
  selectedPageIdSubscription={[Function Subscriber]}
  selectedPaymarket$={[Function Store]}
  selectedPaymarketSubscription={[Function Subscriber]}
  selectedRate={[Function String]}
  selectedRate$={[Function Store]}
  selectedRateSubscription={[Function Subscriber]}
  sharePricingSummaryConflict$={[Function Store]}
  sharePricingSummaryError$={[Function Store]}
  sharePricingSummaryModalOpen$={[Function Store]}
  store={[Function Store]}
  systemUserGroupNames={[Function Object]}
  userContext$={[Function Store]}
>
  <pf-card-layout
    pageiconclass="fa-file-alt"
    pagesubtitle="Let's review a summary of your pricing activity"
    pagetitle="Summary"
  >
    
    <kendo-pdf-export
      forcepagebreak=".page-break"
      ng-reflect-creator="Payfactors"
      ng-reflect-force-page-break=".page-break"
      ng-reflect-paper-size="Letter"
      ng-reflect-scale="0.7"
    >
      <div>
        <div
          class="summary-pdf-wrapper"
        >
          <img
            alt="payfactors"
            class="pdf-logo"
            src="assets/images/payfactors-logo-on-white.png"
          />
          <div
            class="pdf-header"
          >
            Pricing Summary
          </div>
          <div
            class="summary-container row mt-4"
          >
            <div
              class="col left-container"
            >
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Job Title
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Effective Date
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      03/01/2019
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Rate
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      Annual
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    FLSA
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      -
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Currency
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      
                    </h4>
                  </div>
                </div>
                <div>
                  <span>
                    Market
                  </span>
                  <div>
                    <h4
                      class="header-blue paymarket-name"
                      title="Boston"
                    >
                      Boston
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="width-250"
                >
                  <span>
                    Base Salary
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Total Cash Compensation
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Salary Trend
                  </span>
                  <pf-salary-trend-chart />
                </div>
              </div>
              
            </div>
            <div
              class="right-container col"
            >
              <div
                class="d-flex flex-column"
              >
                <span>
                  Job Description
                </span>
                <div
                  class="job-description"
                >
                    
                </div>
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </kendo-pdf-export>
    <pf-glossary-of-terms />
    
    <button
      class="btn comphub-primary-btn"
      data-qa-id="btn-priceNewJob"
    >
       Price New Job 
    </button>
    <div
      class="download-pdf"
      data-qa-id="btn-downloadPdf"
    >
      <i
        class="fas fa-file-pdf"
      />
       Download 
    </div>
    <div
      class="share-btn"
      data-qa-id="btn-share"
    >
      <i
        class="fas fa-share"
      />
       Share 
    </div>
    
    
    
  </pf-card-layout><pf-share-pricing-summary-modal />
</pf-summary-card>
`;

exports[`Comphub - Main - Summary Card Component should hide create project button when no access to projects tile 1`] = `
<pf-summary-card
  activeCountryDataSet$={[Function Store]}
  canAccessProjectsTile$={[Function Observable]}
  creatingProject$={[Function Store]}
  creatingProjectError$={[Function Store]}
  firstDayOfMonth={[Function Date]}
  jobData="null"
  jobSalaryTrendData="null"
  paymarket={[Function Object]}
  pdf={[Function PDFExportComponent]}
  salaryTrendData$={[Function Store]}
  salaryTrendSubscription={[Function Subscriber]}
  selectedJobData$={[Function Store]}
  selectedJobDataSubscription={[Function Subscriber]}
  selectedPageId$={[Function Store]}
  selectedPageIdSubscription={[Function Subscriber]}
  selectedPaymarket$={[Function Store]}
  selectedPaymarketSubscription={[Function Subscriber]}
  selectedRate={[Function String]}
  selectedRate$={[Function Store]}
  selectedRateSubscription={[Function Subscriber]}
  sharePricingSummaryConflict$={[Function Store]}
  sharePricingSummaryError$={[Function Store]}
  sharePricingSummaryModalOpen$={[Function Store]}
  store={[Function Store]}
  systemUserGroupNames={[Function Object]}
  userContext$={[Function Store]}
>
  <pf-card-layout
    pageiconclass="fa-file-alt"
    pagesubtitle="Let's review a summary of your pricing activity"
    pagetitle="Summary"
  >
    
    <kendo-pdf-export
      forcepagebreak=".page-break"
      ng-reflect-creator="Payfactors"
      ng-reflect-force-page-break=".page-break"
      ng-reflect-paper-size="Letter"
      ng-reflect-scale="0.7"
    >
      <div>
        <div
          class="summary-pdf-wrapper"
        >
          <img
            alt="payfactors"
            class="pdf-logo"
            src="assets/images/payfactors-logo-on-white.png"
          />
          <div
            class="pdf-header"
          >
            Pricing Summary
          </div>
          <div
            class="summary-container row mt-4"
          >
            <div
              class="col left-container"
            >
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Job Title
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Effective Date
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      03/01/2019
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Rate
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      Annual
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    FLSA
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      -
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Currency
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      
                    </h4>
                  </div>
                </div>
                <div>
                  <span>
                    Market
                  </span>
                  <div>
                    <h4
                      class="header-blue paymarket-name"
                      title="Boston"
                    >
                      Boston
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="width-250"
                >
                  <span>
                    Base Salary
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Total Cash Compensation
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Salary Trend
                  </span>
                  <pf-salary-trend-chart />
                </div>
              </div>
              
            </div>
            <div
              class="right-container col"
            >
              <div
                class="d-flex flex-column"
              >
                <span>
                  Job Description
                </span>
                <div
                  class="job-description"
                >
                    
                </div>
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </kendo-pdf-export>
    <pf-glossary-of-terms />
    
    <button
      class="btn comphub-primary-btn"
      data-qa-id="btn-priceNewJob"
    >
       Price New Job 
    </button>
    <div
      class="download-pdf"
      data-qa-id="btn-downloadPdf"
    >
      <i
        class="fas fa-file-pdf"
      />
       Download 
    </div>
    <div
      class="share-btn"
      data-qa-id="btn-share"
    >
      <i
        class="fas fa-share"
      />
       Share 
    </div>
    
    
    
  </pf-card-layout><pf-share-pricing-summary-modal />
</pf-summary-card>
`;

exports[`Comphub - Main - Summary Card Component should show create project button when has access to projects tile 1`] = `
<pf-summary-card
  activeCountryDataSet$={[Function Store]}
  canAccessProjectsTile$={[Function Observable]}
  creatingProject$={[Function Store]}
  creatingProjectError$={[Function Store]}
  firstDayOfMonth={[Function Date]}
  jobData="null"
  jobSalaryTrendData="null"
  paymarket={[Function Object]}
  pdf={[Function PDFExportComponent]}
  salaryTrendData$={[Function Store]}
  salaryTrendSubscription={[Function Subscriber]}
  selectedJobData$={[Function Store]}
  selectedJobDataSubscription={[Function Subscriber]}
  selectedPageId$={[Function Store]}
  selectedPageIdSubscription={[Function Subscriber]}
  selectedPaymarket$={[Function Store]}
  selectedPaymarketSubscription={[Function Subscriber]}
  selectedRate={[Function String]}
  selectedRate$={[Function Store]}
  selectedRateSubscription={[Function Subscriber]}
  sharePricingSummaryConflict$={[Function Store]}
  sharePricingSummaryError$={[Function Store]}
  sharePricingSummaryModalOpen$={[Function Store]}
  store={[Function Store]}
  systemUserGroupNames={[Function Object]}
  userContext$={[Function Store]}
>
  <pf-card-layout
    pageiconclass="fa-file-alt"
    pagesubtitle="Let's review a summary of your pricing activity"
    pagetitle="Summary"
  >
    
    <kendo-pdf-export
      forcepagebreak=".page-break"
      ng-reflect-creator="Payfactors"
      ng-reflect-force-page-break=".page-break"
      ng-reflect-paper-size="Letter"
      ng-reflect-scale="0.7"
    >
      <div>
        <div
          class="summary-pdf-wrapper"
        >
          <img
            alt="payfactors"
            class="pdf-logo"
            src="assets/images/payfactors-logo-on-white.png"
          />
          <div
            class="pdf-header"
          >
            Pricing Summary
          </div>
          <div
            class="summary-container row mt-4"
          >
            <div
              class="col left-container"
            >
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Job Title
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="mr-5"
                >
                  <span>
                    Effective Date
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      03/01/2019
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Rate
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      Annual
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    FLSA
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      -
                    </h4>
                  </div>
                </div>
                <div
                  class="mr-5"
                >
                  <span>
                    Currency
                  </span>
                  <div>
                    <h4
                      class="header-blue"
                    >
                      
                    </h4>
                  </div>
                </div>
                <div>
                  <span>
                    Market
                  </span>
                  <div>
                    <h4
                      class="header-blue paymarket-name"
                      title="Boston"
                    >
                      Boston
                    </h4>
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-row mb-4"
              >
                <div
                  class="width-250"
                >
                  <span>
                    Base Salary
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Total Cash Compensation
                  </span>
                  <div
                    class="d-flex flex-row"
                  >
                    <h2
                      class="currency-sign"
                    >
                      $
                    </h2>
                    <h1
                      class="header-blue"
                    >
                      
                    </h1>
                  </div>
                  <div
                    class="w-75"
                  >
                    <pf-salary-bar-chart />
                  </div>
                </div>
                <div
                  class="width-250"
                >
                  <span>
                    Salary Trend
                  </span>
                  <pf-salary-trend-chart />
                </div>
              </div>
              
            </div>
            <div
              class="right-container col"
            >
              <div
                class="d-flex flex-column"
              >
                <span>
                  Job Description
                </span>
                <div
                  class="job-description"
                >
                    
                </div>
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </kendo-pdf-export>
    <pf-glossary-of-terms />
    
    <button
      class="btn comphub-primary-btn"
      data-qa-id="btn-priceNewJob"
    >
       Price New Job 
    </button>
    <div
      class="download-pdf"
      data-qa-id="btn-downloadPdf"
    >
      <i
        class="fas fa-file-pdf"
      />
       Download 
    </div>
    <div
      class="share-btn"
      data-qa-id="btn-share"
    >
      <i
        class="fas fa-share"
      />
       Share 
    </div>
    
    <div
      class="create-project-btn"
      data-qa-id="btn-create-project"
    >
      <i
        class="fas fa-clipboard-list"
      />
       Create Project 
    </div>
    
    
  </pf-card-layout><pf-share-pricing-summary-modal />
</pf-summary-card>
`;
